--- a/atelje-by-m/package.json
+++ b/atelje-by-m/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --fix",
     "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
